--- a/public/package.json
+++ b/public/package.json
@@ -9,7 +9,8 @@
     "keymirror": "~0.1.0",
     "object-assign": "^1.0.0",
     "react": "^0.12.0",
-    "jquery": "~2.1.4"
+    "jquery": "~2.1.4",
+    "bootstrap": "~3.3.5"
   },
   "devDependencies": {
     "browserify": "^6.2.0",
