--- a/public/package.json
+++ b/public/package.json
@@ -8,9 +8,10 @@
     "flux": "^2.0.1",
     "keymirror": "~0.1.0",
     "object-assign": "^1.0.0",
-    "react": "^0.12.0",
+    "react": "^0.13.0",
     "jquery": "~2.1.4",
-    "bootstrap": "~3.3.5"
+    "bootstrap": "~3.3.5",
+    "react-router": "~0.13.3"
   },
   "devDependencies": {
     "browserify": "^6.2.0",
